--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         .printable-area {
             width: 210mm;
-            min-height: 297mm;
+            /* min-heightを削除して、内容に応じた高さになるように変更 */
             box-sizing: border-box;
         }
     </style>
@@ -195,5 +195,4 @@
     </script>
 </body>
 </html>
-
 
